fixed spacing on flexbox rows

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -12,7 +12,7 @@
 .row{
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0 -10px 10px;
+	margin: 0 -10px -20px;
 }
 
 .row > *{
